# sentry_system

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  tcp_video_receiver.py  udp_video_receiver.py
inc/: alarm.hpp  common.h  ffmpeg_muxer.hpp  image_process.hpp  log.h  msg_about.h  msg_deliver.h  my_time.h  sqlite_about.h  storage_video.hpp  tcp_send.h
src/: main.c  msg_deliver.c
src/alarm/: alarm.cpp  image_process.cpp  readme.md
src/image_process/: image_process.cpp
src/log/: log.c  readme.md  sqlite_about.c
src/msg/: msg_about.c  msg_deliver.c  readme.md
src/net/: readme.md  tcp_send.c  udp_send.c
src/storage/: ffmpeg_muxer.cpp  readme.md  storage_video.cpp
src/time/: my_time.c  readme.md
src/v4l2/: v4l2_dev.c
